--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GA-LDN React Template</title>
+    <link rel="icon" href="public/slr-camera-32.png" />
+    <meta
+  name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
+    <title>APPerture</title>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
