--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="public/slr-camera-32.png" />
+    <link rel="icon" href="public/slr-camera-32.png" src="public/slr-camera-32.png"/>
     <meta
   name="viewport"
   content="minimum-scale=1, initial-scale=1, width=device-width"
